# WTlib

./: .gitignore  CMakeLists.txt  Makefile  README.md
demo/: .ycm_extra_conf.py  CMakeLists.txt  main.cpp  main.h  pics_converter.cpp  pics_converter.h  pics_io.h  wt_converter.cpp  wt_converter.h
lib/: .ycm_extra_conf.py  CMakeLists.txt  environment.cpp  main.cpp  main.h  nastaveni_luts.cpp  wt_inter.h  wtdata.cpp
lib/include/: .wt.h.swp  wt.h
lib/src/: CMakeLists.txt  io.cpp  io.h  std_macro.h  zpracovani_pasma.cpp  zpracovani_pasma.h
lib/src/barevna_transformace/: avrg_to_zero.cpp  avrg_to_zero.h  barevna_transformace.cpp  barevna_transformace.h
lib/src/dekompozice/: dek_pyr.cpp  dek_rb.cpp  dekompozice.cpp  dekompozice.h  dekompozice_internal.h  rozlozeni.h
lib/src/dekompozice/misc/: .~lock.red_black_implementovane_rozdeleni.ods#  red_black_implementovane_rozdeleni.ods
lib/src/entropicky_koder/: CMakeLists.txt  entropicky_koder.cpp  entropicky_koder.h
lib/src/entropicky_koder/aritmeticky/: CMakeLists.txt  aritm_sign32_256e.cpp  aritm_sign32_256e.h  aritmeticky.cpp  aritmeticky.h  models.h
lib/src/entropicky_koder/aritmeticky/zakladni/: CMakeLists.txt  model_256e.cpp  model_256e.h  model_sign.cpp  model_sign.h
lib/src/entropicky_koder/aritmeticky/zk/: aritm_bitpane.cpp  aritm_predictor.cpp
lib/src/entropicky_koder/ebcot/: CMakeLists.txt  ent_ebcot.cpp  ent_ebcot.h
lib/src/entropicky_koder/ebcot/ebcot_ffmpeg/: ebcot_dec.cpp  ebcot_dec.h  ebcot_enc.cpp  ebcot_enc.h  enc_dec_common.cpp  enc_dec_common.h
lib/src/entropicky_koder/ebcot/mq_ffmpeg/: mqc.cpp  mqc.h  mqcenc.cpp
lib/src/entropicky_koder/nic/: ent_nic.cpp  ent_nic.h
lib/src/predictor/: CMakeLists.txt  pred_nic.h  predictor.cpp  predictor.h  predictor_inter_all.h
lib/src/predictor/3/: CMakeLists.txt  med.cpp  paeth.cpp
lib/src/predictor/less3/: CMakeLists.txt  diag.cpp  left.cpp  up.cpp
lib/src/predictor/more3/: gradient_adjusted.cpp
lib/src/stat/: CMakeLists.txt  sber_statistik.cpp  sber_statistik.h
lib/src/threading/: work_manager.cpp  work_manager.h
lib/src/vlnka/: vlnka.cpp  vlnka.h  vlnka_13_7_C.cpp  vlnka_13_7_T.cpp  vlnka_2_10.cpp  vlnka_2_6.cpp  vlnka_5_11_A.cpp  vlnka_5_11_C.cpp  vlnka_6_14.cpp  vlnka_cdf53.cpp  vlnka_cdf53p.cpp  vlnka_cdf53pm.cpp  vlnka_cdf97.cpp  vlnka_cdf_9_7_m.cpp  vlnka_cdf_9_7_mm.cpp  vlnka_haar.cpp  vlnka_internal.h  vlnka_linear.cpp
