project(projbc)


# add here
file (GLOB ${PROJECT_NAME}_headers  *.h)
file (GLOB ${PROJECT_NAME}_sources  *.cpp)

FIND_PACKAGE( Boost 1.40 COMPONENTS program_options REQUIRED )
FIND_PACKAGE( Threads REQUIRED )

ADD_EXECUTABLE( ${PROJECT_NAME} 
                ${${PROJECT_NAME}_headers} 
                ${${PROJECT_NAME}_sources} )

TARGET_LINK_LIBRARIES(${PROJECT_NAME} wt)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_PROGRAM_OPTIONS_LIBRARY})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})

INCLUDE_DIRECTORIES(${CImg_header})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})





#INCLUDE_DIRECTORIES(${wt_SOURCE_DIR})
# INSTALL ( TARGETS  ${PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib/static )
